--- a/anthologies/117.md
+++ b/anthologies/117.md
@@ -1,21 +1,33 @@
-**Investment plan**.
+**Investment plan**.  
 
-The following is a method to manage your money better.
+The following is a method to manage your money better.  
 
-1. Get 11 Bank Accounts.
+1.   Get 9 Bank Accounts.  
 
-2. Use these Bank Accounts in the following ways.
+2.   Use these Bank Accounts in the following ways.  
 
-- Use Bank Account #1 as your Main account (100% of your money) for all incoming funds. All incoming funds should come to Bank Account #1 only.
-- Use Bank Account #2 as your Tax account (10% of your money or as advised by your tax accountant) for paying tax. Transfer the tax amount to Bank Account #2 and pay only tax using Bank Account #2 only.
-- Use Bank Account #3 as your Office account (10% of your money) for marketing, office expenses, and utilities expenses. All office expenses should be spent from Bank Account #3 only.
-- Use Bank Account #4 as your Marketing account (10% of your money) for all business marketing purposes. Set the marketing budget to less than 10% of the expected gross revenue in Bank Account #1.
-- Use Bank Account #5 as your Home account (10% of your money) for food, rent, outings, and utilities. All home expenses should be spent from Bank Account #5 only.
-- Use Bank Account #6 as your Retirement account (10% of your money) for debt, gold, investments, mutual funds, and share/stock trading.
-- Use Bank Account #7 as Cash Account for Parents (10% of your money) for parental care.
-- Use Bank Account #8 as Cash Account (10% of your money) for medical emergencies.
-- Use Bank Account #9 as Cash Account (10% of your money) for the education of any progeny.
-- Use Bank Account #10 as Cash Account (10% of your money) for buying real estate. You should buy real estate in cash only.
-- Use Bank Account #11 as Dummy Account (10% of your bank money) for bank server errors or miscellaneous expenses.
+Use Bank Account #1 as your Main account (100% of your money) for all incoming funds.  
+All incoming funds should come to Bank Account #1 only.  
 
-If you have read this far, start calculating backwards from here with the question - “How much would I need for this?” - at every stage.
+Use Bank Account #2 as your Tax account (30% of your money or as advised by your tax accountant) for paying tax.  
+Transfer the tax amount to Bank Account #2 and pay only tax using Bank Account #2 only.  
+
+Use Bank Account #3 as your Office account (10% of your money) for marketing, office expenses, and utilities expenses.  
+All office expenses should be spent from Bank Account #3 only.  
+Upto 10% of Bank Account #3 (1% of your money) should be used for all business marketing purposes, and should earn the expected gross revenue i.e. 100% of Bank Account #1.  
+
+Use Bank Account #4 as your Home account (10% of your money) for food, rent, outings, and utilities.  
+All home expenses should be spent from Bank Account #4 only.  
+
+Use Bank Account #5 as your Retirement account (10% of your money) for debt, gold, investments, mutual funds, and share/stock trading.  
+
+Use Bank Account #6 as Cash Account (10% of your money) for buying real estate.  
+You should buy real estate in cash only.  
+
+Use Bank Account #7 as Cash Account (10% of your money) for the education of any progeny.  
+
+Use Bank Account #8 as Cash Account (10% of your money) for medical emergencies.  
+
+Use Bank Account #9 as Cash Account for Parents (10% of your money) for parental care.  
+
+If you have read this far, start calculating backwards from here with the question - “How much would I need for this?” - at every stage.  
