--- a/anthologies/12.md
+++ b/anthologies/12.md
@@ -1,2 +1,4 @@
 **A perfect mess**.  
-You know what, I am happy that we are a perfect mess. And I think, the sooner we accept that, and not try to conform ourselves to any idea of perfection: we will be happy.
+
+You know what, I am happy that we are a perfect mess.  
+And I think, the sooner we accept that, and not try to conform ourselves to any idea of perfection: we will be happy.  
