--- a/anthologies/01.md
+++ b/anthologies/01.md
@@ -1,2 +1,4 @@
 **A butterfly**.  
-A butterfly to remind you, that all is not lost. A butterfly that flew by, when you were lost in your thoughts.
+
+A butterfly to remind you, that all is not lost.  
+A butterfly that flew by, when you were lost in your thoughts.  
