--- a/anthologies/117.md
+++ b/anthologies/117.md
@@ -26,7 +26,7 @@ You should buy real estate in cash only.
 
 Use Bank Account #7 as Cash Account (10% of your money) for the education of any progeny.  
 
-Use Bank Account #8 as Cash Account (10% of your money) for medical emergencies.  
+Use Bank Account #8 as Cash Account (10% of your money) for health purposes.  
 
 Use Bank Account #9 as Cash Account for Parents (10% of your money) for parental care.  
 
